# DevTools-Lab

./: .aiexclude  .cursorrules  .gitignore  Dockerfile.go  Dockerfile.java  Dockerfile.node  Dockerfile.python  LICENSE  README.md  claude.json  docker-compose.yml  mcp-servers.toml
.claude/: CLAUDE.md  mcp.json  plugins.json  settings.json
.claude/skills/advanced-profiler/: SKILL.md
.claude/skills/auto-deployer/: SKILL.md
.claude/skills/database-migration/: SKILL.md
.claude/skills/migration-rollback/: SKILL.md
.claude/skills/performance-optimizer/: SKILL.md
.claude/skills/security-audit/: SKILL.md
.codex/: .gitkeep  config.toml  mcp.json
.codex/skills/code-hardener/: SKILL.md
.codex/skills/fast-review/: SKILL.md
.codex/skills/refactoring/: SKILL.md
.cursor/: .gitkeep  extentions.json  mcp.json
.cursor/skills/api-designer/: SKILL.md
.gemini/: .gitkeep  extention.yaml
.github/: copilot.yml
infrastructure/: main.tf  outputs.tf  variables.tf
mcp_servers/: code_reviewer_server.py  code_search_server.py  dependency_analyzer_server.py  doc_generator_server.py  metrics_collector_server.js  migration_helper_server.js  risk_scorer_server.py  secret_scanner_server.py  test_runner_server.py
notebooks/: ai-experiments.ipynb  data-analysis.ipynb  model-training.ipynb
src/csharp/: DevToolsLab.sln
src/go/: go.mod
src/java/: pom.xml
src/python/: __init__.py  requirements.txt
src/rust/: Cargo.toml
src/rust/src/: config.rs  http_client.rs  main.rs  models.rs  scanner.rs
src/typescript/: package-lock.json  package.json  passport-auth0.d.ts
(+109 files in other folders)
