[package]
name = "devtools-scanner"
version = "0.1.0"
edition = "2021"
description = "CLI tool for scanning and analyzing developer tool configurations"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
walkdir = "2.4"
regex = "1.10"
anyhow = "1.0"
toml = "0.8"
